--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     executor: rn/linux_js
     working_directory: abc/
     steps:
+      - checkout
       - run:
           name: "Check YARN version"
           command: |
