--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
   check-yarn-version:
     executor: rn/linux_js
     steps:
+      - checkout
       - run:
           name: "List dir contents"
           command: |
