--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,9 @@ jobs:
           command: |
             pwd && ls -al
       - run:
-          name: "Check YARN version"
-          command: |
-            yarn --version
-      - run:
           name: "Install Yarn dependencies"
           command: |
-            yarn install
+            cd abc/ && yarn install
   check-npm-version:
     executor: rn/linux_js
     steps:
